# tupitru

./: README.md  flake.nix  module.nix  package-lock.json  rules.md
.github/workflows/: build.yml  deploy.yml
backend/: .gitignore  ConnectionManager.py  EventHandler.py  GameManager.py  README.md  devshell.nix  main.py  package.nix  pyproject.toml
backend/app/: ConnectionManager.py  GameManager.py  config.py  main.py  schemas.py
backend/app/event_handler/: __init__.py  handler.py  router.py
backend/app/event_handler/internal/: disconnect.py  error.py  game.py  pregame.py
backend/app/event_handler/schemas/: external.py  internal.py  protocol.py
backend/app/event_handler/types/: external.py  internal.py  protocol.py
backend/app/game_state/: BoardState.py  GameManager.py  Player.py  Room.py  schemas.py
backend/app/game_state/static/: board1.json
backend/app/static/: index.html
backend/event_handler/: __init__.py  handler.py  router.py
backend/event_handler/internal/: disconnect.py  pregame.py
backend/event_handler/types/: protocol.py
backend/static/: index.html
backend/tests/: game_manager_test.py
backend/tests/board/: board_test.py
backend/tests/board_jason/: board1.json
backend/tests/game_state/: game_manager_test.py
backend/tupitru_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env  README.md  devshell.nix  eslint.config.js  index.html  package-lock.json  package.json  package.nix  vite.config.ts
frontend/src/: App.css  App.tsx  PopUp.css  Room.css  index.css  main.tsx  types.ts
frontend/src/phaser/: config.ts
(+18 files in other folders)
