[project]
name = "tupitru-backend"
version = "0.1.0"
description = "Backend API for the Tupitru! game"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
